i changes style and junior spelling

--- a/style.css
+++ b/style.css
@@ -30,11 +30,9 @@ header>nav>ul>li>a:hover{
 .banner{
     background: url(./images/pexels-yan-krukov-8613368.jpg)
      no-repeat center;
-    background-size: cover;
-    height: 700px;
-    width: 100%;
+    height: 600px;
+    width: auto;
     text-align: right;
-    padding: 90px 50px ; 
     background-size:cover; 
     /* background-size: contain;
     */
@@ -50,8 +48,9 @@ header>nav>ul>li>a:hover{
     /* margin-left: 30%; */
     width:800px ;
     font-size: 50PX;
-    margin-bottom: 40px;
-
+    position: absolute;
+    top:25%;
+    left: 7%;
 }
 .banner>h1:hover{
     color: red;
